# vpn-bot-platform

./: .env.example  .gitignore  .gitmodules  AI_CONTEXT.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
bot/: __init__.py  __main__.py  admin_discounts.py  admin_inline.py  admin_payments.py  admin_users.py  app.py  commands.py  config.py  configs.py  connection_guides.py  constants.py  context.py  db.py  discount_flow.py  forced_join.py  formatting.py  keyboards.py  marzban.py  menu_helpers.py  notifications.py  qr.py  quota.py  states.py  trial_flow.py  user_profile.py
deploy/: Dockerfile  backup-postgres.sh  deploy.sh  healthcheck.sh  install-backup-timer.sh  restart-sellers.sh
docs/: ARCHITECTURE.md  DATA_MODEL.md  DECISIONS.md  DEPLOY_SERVER_04.md  DISASTER_RECOVERY.md  EXTERNAL_SELLER_BOT.md  MONITORING.md  PRODUCT_FLOW.md  ROADMAP.md  SERVER_INVENTORY.md  WEBHOOK_MODE.md
scripts/: backup_seller_sqlite.sh  diagnose_master_bot.py
tests/: test_admin_discounts.py  test_admin_earning.py  test_admin_inline.py  test_admin_users.py  test_block_middleware.py  test_bot_forced_join_membership.py  test_bot_forced_join_ref.py  test_bot_forced_join_text.py  test_common_foundation.py  test_configs.py  test_connection_guides.py  test_discount_flow.py  test_docker_runtime.py  test_forced_join.py  test_forced_join_middleware.py  test_hardening_controls.py  test_keyboards.py  test_marzban.py  test_marzban_integration.py  test_master_command_parsing.py  test_master_reseller_service.py  test_qr.py  test_referrals.py  test_repository.py  test_seller_context_service.py  test_seller_handlers.py  test_seller_inline.py  test_simple_seller_master_quota.py  (+4 more)
(+69 files in other folders)
