[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vpn-bot-platform"
version = "0.1.0"
description = "Telegram VPN reseller bot platform"
requires-python = ">=3.12"
dependencies = [
  "aiogram>=3.7",
  "alembic>=1.13",
  "aiosqlite>=0.20",
  "asyncpg>=0.29",
  "cryptography>=42",
  "docker>=7",
  "httpx>=0.27",
  "pillow>=10",
  "pydantic-settings>=2.2",
  "qrcode>=7.4",
  "sqlalchemy[asyncio]>=2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.23",
  "ruff>=0.4",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"
