[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vpn-bot-platform"
version = "0.1.0"
description = "Telegram VPN reseller bot platform"
requires-python = ">=3.12"
dependencies = [
  "aiogram>=3.7,<4.0",
  "alembic>=1.13",
  "aiosqlite>=0.20",
  "asyncpg>=0.29",
  "cryptography>=42",
  "docker>=7",
  "httpx>=0.27,<1.0",
  "pillow>=10",
  "pydantic-settings>=2.2,<3.0",
  "python-dotenv>=1.0,<2.0",
  "qrcode[pil]>=7.4,<9.0",
  "sqlalchemy[asyncio]>=2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9.0",
  "pytest-asyncio>=0.23,<1.0",
  "ruff>=0.4",
]

[tool.setuptools.packages.find]
where = [".", "src"]
include = ["bot*", "vpn_bot_platform*"]

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = [
  ".git",
  ".venv",
  "external",
]

[tool.pytest.ini_options]
norecursedirs = [
  ".git",
  ".venv",
  "external",
]
